--- a/styles/gameStyles.css
+++ b/styles/gameStyles.css
@@ -1,31 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-*::after, *::before{
+*::after,
+*::before {
     box-sizing: border-box;
-}
-
-:root{
-    --red:#c51e0e; 
-    --grey: #c3c4d3;
-    --green1: #0FB36E;
-    --green2: #025464;
-    --orange1: #E57C23;
-    --orange2: #E8AA42;
-}
-
-body{
     margin: 0;
     padding: 0;
-    background-image: url(image/webp.webp);
+}
+
+:root {
+    --red: #c51e0e;
+    --grey: #c3c4d3;
+    --green1: #0FB36E;
+}
+
+body {
+
+    background-image: url(/assets/space.webp);
     background-position: center;
     background-repeat: no-repeat;
-    background-size:auto;
+    background-size: auto;
     font-family: 'Press Start 2P', cursive;
-    font-weight:400;
+    font-weight: 400;
     text-transform: uppercase;
 }
 
-header{
+header {
     position: absolute;
     left: 0;
     right: 0;
@@ -36,58 +35,66 @@ header{
     place-items: center;
 }
 
-p{
+p {
     color: var(--red);
 }
 
-header > span{
+header>span {
     color: var(--grey);
 }
 
-#score{
+#score {
     order: 1;
 }
 
-#high-score{
+#high-score {
     order: 2;
 }
 
-#lives{
+#lives {
     order: 3;
 }
 
-#score-value{
+#score-value {
     order: 4;
 }
 
-#high-score-value{
+#high-score-value {
     order: 5;
 }
 
-#lives-value{
+#lives-value {
     order: 6;
 }
 
-main{
+main {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     height: 100vh;
 }
 
-.formation{
+.formation {
+    position: relative;
     display: grid;
-    grid-template-columns: repeat(6, auto);
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(4, auto);
     margin-top: 8rem;
-    padding: 1.2rem;
 }
 
-img:not(.my-ship){
-    width: 3.1rem;
-    height: 3.1rem;
+.higher-level,
+.medium-level,
+.ease-level-blue,
+.ease-level-green {
+    display: flex;
+    justify-content: center;
+    visibility: visible;
 }
 
-.start-game{
+img {
+    width: 3rem;
+    height: 3rem;
+}
+
+.start-game {
     position: fixed;
     top: 0;
     left: 0;
@@ -95,57 +102,61 @@ img:not(.my-ship){
     height: 100%;
 }
 
-.ready{
+.ready {
     position: absolute;
+    display: flex;
     top: 50%;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    left: 0;
+    right: 0;
+    place-content: center;
     padding: 1.2rem;
-    margin: 1.2rem;
-    text-align: center;
     font-family: 'Press Start 2P', cursive;
     color: transparent;
-    
 }
 
-.word-1{
+.word-1 {
     animation: showUpAndGoOut 4s ease-in 0s;
 }
 
-.word-2{
+.word-2 {
     animation: showUpAndGoOut 5s ease-in 1s;
 }
 
-.word-3{
+.word-3 {
     animation: showUpAndGoOut 6s ease-in 2s;
 }
 
 .space-ship {
-    margin-top: 18rem;
+    padding-top: 18rem;
 }
 
-#my-ship > img{
+#my-ship>img {
+    position: absolute;
     left: 0;
     right: 0;
     display: flex;
     justify-content: center;
 }
 
-.bullet{
+.projectile {
     position: absolute;
-    border: 1px;
-    height: 4px;
-    width: 4px;
+    transform: rotate(-45deg) scale(.3);
+}
+
+.destroyed {
+    display: none;
 }
 
 
 .wrapper {
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     left: 0;
     right: 0;
-    padding: 3rem;
+    margin-top: 5rem;
 }
 
 button {
@@ -159,21 +170,75 @@ button {
     text-transform: uppercase;
 }
 
-@keyframes showUpAndGoOut{
-    from{
+
+@media(min-width:768px) {
+    p {
+        font-size: 2rem;
+    }
+
+    header>span {
+        font-size: 1.5rem;
+    }
+
+    .main {
+        position: relative;
+    }
+
+    .ready {
+        top: 27rem;
+        font-size: 3rem;
+    }
+
+    .formation {
+        left: 0;
+        right: 0;
+        margin: 8rem auto;
+    }
+
+    .enemy-ship>img {
+        height: 5rem;
+        width: 5rem;
+    }
+
+    .space-ship {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 0;
+    }
+
+    #my-ship img {
+        position: absolute;
+        height: 4.5rem;
+        width: 4.5rem;
+    }
+
+    .projectile {
+        scale: 1.2 1.2;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+}
+
+@keyframes showUpAndGoOut {
+    from {
         opacity: 0;
         text-shadow: 0px 0px 30px var(--green1);
         transform: scale(2);
     }
-    50%{
+
+    50% {
         opacity: 1;
         text-shadow: 0px 0px 1px var(--green1);
         transform: scale(1);
     }
-    to{
+
+    to {
         opacity: 0;
         text-shadow: 0px 0px 30px var(--green1);
         transform: scale(0);
     }
-    
 }
