--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -1,143 +1,144 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    font-family:'Kumbh Sans', sans-serif;
-    font-size: 62.5%;
-    background-image: url(/assets/space.webp);
+body {
+  font-family: "Kumbh Sans", sans-serif;
+  font-size: 62.5%;
+  background-image: url(/assets/space.webp);
 }
 
 :root {
-    --lighter-green: #0fb36e;
-    --lighter-red: #c51e0e;
-    --white-text: #c3c4d3;
-  }
+  --lighter-green: #0fb36e;
+  --lighter-red: #c51e0e;
+  --white-text: #c3c4d3;
+}
 
-.flex{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 25px;
-    /* height: 100vh; */
+.flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 25px;
+  /* height: 100vh; */
 }
 
 .card {
-    background-color: white;
-    width: 250px;
-    height: 350px;
-    border-radius: 16px;
-    overflow: hidden;
-    box-shadow: 0 5px  5px #00000014;
-    margin: 15px;
+  background-color: white;
+  width: 250px;
+  height: 350px;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 5px 5px #00000014;
+  margin: 15px;
 }
 
-.card-header{
-    width: 100%;
-    aspect-ratio: 3/1.3;
-    display: block;
+.card-header {
+  width: 100%;
+  aspect-ratio: 3/1.3;
+  display: block;
 }
 
-.card-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.card-body-profile{
-    width: 100px;
-    border: 5px solid white;
-    border-radius: 50px;
-    margin-top: -40px;
+.card-body-profile {
+  width: 100px;
+  border: 5px solid white;
+  border-radius: 50px;
+  margin-top: -40px;
 }
 
-.card-body-name{
-    margin: 10px;
-    font-size: 1rem;
-    font-family: "Press Start 2P", cursive;
-    text-align: center;
+.card-body-name {
+  margin: 10px;
+  font-size: 1rem;
+  font-family: "Press Start 2P", cursive;
+  text-align: center;
 }
 
-.card-body-user{
-    font-size: 0.8rem;
-    color:rgb(59, 59, 59)
+.card-body-user {
+  font-size: 0.8rem;
+  color: rgb(59, 59, 59);
 }
 
-.card-body-biography{
-    font-size: 1rem;
-    margin: 20px;
-    color: rgb(75, 73, 73);
-    text-align: center;
+.card-body-biography {
+  font-size: 1rem;
+  margin: 20px;
+  color: rgb(75, 73, 73);
+  text-align: center;
 }
 
-.card-footer-social{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.card-footer-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.card-footer-instagram, .card-footer-twitter{
-    width: 25px;
-    margin: 10px;
+.card-footer-instagram,
+.card-footer-twitter {
+  width: 25px;
+  margin: 10px;
 }
 
-.card-footer-youtube{
-    width: 35px;
-    margin: 10px;
+.card-footer-youtube {
+  width: 35px;
+  margin: 10px;
 }
 
 header {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 40px;
-    border-radius: 0 0 10px 10px;
-    background-color: #8a8888ac;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-  }
-  
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  border-radius: 0 0 10px 10px;
+  background-color: #8a8888ac;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
 .button-to-game {
-    font-size: 12px;
-    font-family: "Press Start 2P", cursive;
-    text-decoration: none;
-    background: none;
-    padding: 4px;
-    border: none;
-    color: var(--white-text);
-    cursor: pointer;
+  font-size: 12px;
+  font-family: "Press Start 2P", cursive;
+  text-decoration: none;
+  background: none;
+  padding: 4px;
+  border: none;
+  color: var(--white-text);
+  cursor: pointer;
 }
 
-.button-span{
-    font-size: 20px;
-    font-weight: bolder;
-}
-  
-@media(min-width: 768px){
-    .flex{
-        display: flex;
-        flex-direction: row;
-        height: 80vh;
-    }
-
-    .card{
-        width: 250px;
-        height: 300px;
-    }
+.button-span {
+  font-size: 20px;
+  font-weight: bolder;
 }
 
-@media(min-width: 1440px){
-    .flex{
-        height: 85vh;
-    }
+@media (min-width: 768px) {
+  .flex {
+    display: flex;
+    flex-direction: row;
+    height: 80vh;
+  }
 
-    .card{
-        width: 300px;
-        height: 350px;
-    }
+  .card {
+    width: 250px;
+    height: 300px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .flex {
+    height: 85vh;
+  }
+
+  .card {
+    width: 300px;
+    height: 350px;
+  }
 }
